modified:   educational_practice_2/HTML/login.html 	modified:   educational_practice_2/HTML/register.html

--- a/educational_practice_2/HTML/login.html
+++ b/educational_practice_2/HTML/login.html
@@ -11,10 +11,11 @@
             <h1>Авторизация</h1>
 
             <div id="login_form">
-                <form action="">
+                <form action="" onsubmit="window.open('./account.html')">
                     <input type="text" placeholder="Логин" required>
                     <input type="password" placeholder="Пароль" minlength="12" required>
-                    <input type="email" placeholder="Электронная почта" required>  
+                    <input type="email" placeholder="Электронная почта" required>
+                    <input type="submit">
                 </form>
             </div>
 
