--- a/educational_practice_2/HTML/register.html
+++ b/educational_practice_2/HTML/register.html
@@ -11,12 +11,13 @@
             <h1>Регистрация</h1>
 
             <div id="register_form">
-                <form action="">
+                <form action="" onsubmit="window.open('./account.html')">
                     <input type="text" placeholder="Логин" required>
                     <input type="password" placeholder="Пароль" minlength="12" required>
                     <input type="text" placeholder="ФИО" required>
                     <input type="tel" placeholder="Номер телефона" required>
                     <input type="email" placeholder="Электронная почта" required>  
+                    <input type="submit">
                 </form>
             </div>
 
