--- a/educational_practice_2/HTML/account.html
+++ b/educational_practice_2/HTML/account.html
@@ -100,7 +100,16 @@
         <a href="../index.html">Выйти из личного кабинета</a>
     </main>
     <footer>
-
+        <div class="footer_contacts">
+            <span>Номер телефона</span>
+            <span>Адрес компании</span>
+            <span>Электронная почта 1</span>
+            <span>Электронная почта 2</span>
+        </div>
+        <div class="footer_useful_links">
+            <span>Политика конфиденциальности</span>
+            <span>Правила оказания услуг</span>
+        </div>
     </footer>
 </body>
 </html>
