modified:   educational_practice_2/CSS/profile.css 	modified:   educational_practice_2/CSS/profile.css.map 	modified:   educational_practice_2/CSS/profile.scss 	new file:   educational_practice_2/CSS/register.css 	new file:   educational_practice_2/CSS/register.css.map 	new file:   educational_practice_2/CSS/register.scss 	modified:   educational_practice_2/CSS/style.css 	modified:   educational_practice_2/CSS/style.css.map 	modified:   educational_practice_2/CSS/style.scss 	modified:   educational_practice_2/HTML/account.html 	modified:   educational_practice_2/HTML/login.html 	modified:   educational_practice_2/HTML/order.html 	modified:   educational_practice_2/HTML/profile.html 	modified:   educational_practice_2/HTML/register.html 	new file:   educational_practice_2/assets/reg_fon.png 	modified:   educational_practice_2/index.html

--- a/educational_practice_2/HTML/account.html
+++ b/educational_practice_2/HTML/account.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/account.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <title>Личный кабинет</title>
 </head>
 <body>
@@ -37,8 +40,6 @@
                         <th scope="col">Номер клиента</th>
                         <th scope="col">Эл.адрес клиента</th>
                         <th scope="col">Имя клиента</th>
-                        <th scope="col">Адрес</th>
-                        <th scope="col">Почтовый индекс</th>
                         <th scope="col">Уникальный код</th>
                     </tr>
                 </thead>
@@ -54,8 +55,6 @@
                         <td>8 965 800 56 47</td>
                         <td>test@gmail.com</td>
                         <td>Николай</td>
-                        <td>Промышленная 15</td>
-                        <td>7336</td>
                         <td>ui1</td>
                         <td><input type="checkbox"></td>
                     </tr>
@@ -70,8 +69,6 @@
                         <td>8 965 800 56 47</td>
                         <td>test@gmail.com</td>
                         <td>Николай</td>
-                        <td>Промышленная 15</td>
-                        <td>7336</td>
                         <td>ui1</td>
                         <td><input type="checkbox"></td>
                     </tr>
@@ -86,8 +83,6 @@
                         <td>8 965 800 56 47</td>
                         <td>test@gmail.com</td>
                         <td>Николай</td>
-                        <td>Промышленная 15</td>
-                        <td>7336</td>
                         <td>ui1</td>
                         <td><input type="checkbox"></td>
                     </tr>
