--- a/educational_practice_2/HTML/order.html
+++ b/educational_practice_2/HTML/order.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/order.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <title>Создание заказа</title>
 </head>
 <body>
@@ -49,8 +52,6 @@
     
             <div id="order_info_main">
                 <input type="text" placeholder="ФИО">
-                <input type="text" placeholder="Адрес">
-                <input type="text" placeholder="Почтовый индекс">
                 <input type="tel" placeholder="Номер телефона">
                 <input type="email" placeholder="Эл.адрес">
                 <input type="text" placeholder="Дата">
@@ -62,7 +63,7 @@
         <div id="order_buttons">
             <button>Создать заказ</button>
             <button>Очистить форму</button>
-            <a href="../index.html">Отменить создание заказа - Вернуться на главную</a>
+            <a href="../index.html" style="width: 60%;">Отменить создание заказа - Вернуться на главную</a>
         </div>
     </main>
     <footer>
