--- a/educational_practice_2/index.html
+++ b/educational_practice_2/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <title>Главная страница</title>
 </head>
 <body>
@@ -18,13 +21,16 @@
         </nav>
     </header>
     <main>
-        <h1>Добро пожаловать на сайт!</h1>
+        <h1>Добро пожаловать на сайт ESDS Competitive Championship!</h1>
 
         <div id="main_company_info">
             <div id="company_info">
-                <p>Тут должен быть какой-то текст</p>
-
-                <p>И тут должен быть какой-то текст</p>
+                <p>
+                    Добро пожаловать на ESDS Competitive Championship! Мы рады объявить о проведении захватывающих соревнований по дрифту в игре BeamNG Drive. Это уникальное событие объединит лучших дрифтеров со всего мира, готовых продемонстрировать свои навыки и мастерство управления автомобилем в условиях высокой скорости и сложных трасс. Участников ждут напряженные заезды, захватывающие повороты и, конечно же, возможность завоевать титул чемпиона! Присоединяйтесь к нам и станьте частью этого незабываемого соревнования!
+                </p>
+                <p>
+                    Хотите проверить свои навыки дрифта и побороться за звание чемпиона ESDS Competitive Championship? Участие открыто для всех желающих! Для регистрации вам потребуется скачать игру BeamNG Drive и ознакомиться с правилами соревнования. Убедитесь, что ваш автомобиль настроен на максимальную производительность, ведь только лучшие смогут справиться с вызовами трассы. Не упустите шанс продемонстрировать свои способности, завести новые знакомства и получить призы!
+                </p>
             </div>
             <div id="company_gallery">
                 <div class="company_img">
